--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>p2os_msgs</build_depend>
   <build_depend>tf</build_depend>
