--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,12 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 catkin_package(
- # INCLUDE_DIRS include
- CATKIN_DEPENDS roscpp std_msgs geometry_msgs sensor_msgs tf
+ INCLUDE_DIRS include
+ CATKIN_DEPENDS roscpp std_msgs geometry_msgs sensor_msgs tf p2os_msgs
+)
+
+include_directories(
+  include
 )
 
 include_directories(
@@ -22,8 +26,11 @@ include_directories(
 add_executable(gazebo_sonar src/gazebo_sonar.cpp)
 target_link_libraries(gazebo_sonar ${catkin_LIBRARIES})
 
-add_executable(forward_kinematics_pioneer src/forward_kinematics_pioneer.cpp)
-target_link_libraries(forward_kinematics_pioneer ${catkin_LIBRARIES})
+# add_executable(forward_kinematics_pioneer src/forward_kinematics_pioneer.cpp)
+# target_link_libraries(forward_kinematics_pioneer ${catkin_LIBRARIES})
 
-add_executable(pwm_quad src/pwm_quad.cpp)
-target_link_libraries(pwm_quad ${catkin_LIBRARIES})
+add_executable(obstacle_avoidance_node src/obstacle_avoidance_node.cpp src/obstacle_avoidance.cpp)
+target_link_libraries(obstacle_avoidance_node ${catkin_LIBRARIES})
+
+# add_executable(pwm_quad src/pwm_quad.cpp)
+# target_link_libraries(pwm_quad ${catkin_LIBRARIES})
