--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,9 @@ include_directories(
 add_executable(gazebo_sonar src/gazebo_sonar.cpp)
 target_link_libraries(gazebo_sonar ${catkin_LIBRARIES})
 
+add_executable(publisher3at src/publisher3at.cc)
+target_link_libraries(publisher3at ${catkin_LIBRARIES})
+
 add_executable(pose src/pose.cpp)
 target_link_libraries(pose ${catkin_LIBRARIES})
 
