Add foward_kinematics node to compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,8 @@ target_link_libraries(pose ${catkin_LIBRARIES})
 add_executable(publisher3at src/publisher3at.cc)
 target_link_libraries(publisher3at ${catkin_LIBRARIES})
 
-#add_executable(forward_kinematics_pioneer src/forward_kinematics_pioneer.cpp)
-#target_link_libraries(forward_kinematics_pioneer ${catkin_LIBRARIES})
+add_executable(forward_kinematics_pioneer src/forward_kinematics_pioneer.cpp)
+target_link_libraries(forward_kinematics_pioneer ${catkin_LIBRARIES})
 
 #add_executable(pwm_quad src/pwm_quad.cpp)
 #target_link_libraries(pwm_quad ${catkin_LIBRARIES})
